common/yak/csharp/asp/parser/asp_parser.go
// Code generated from ./ASPParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package aspparser // ASPParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/yaklang/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ASPParser struct {
	*antlr.BaseParser
}

var ASPParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func aspparserParserInit() {
	staticData := &ASPParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "'<%@'", "'<%!'", "'<%='", "'<%#'", "'<%'", "'</'",
		"'<'", "", "", "'%>'", "", "'/>'", "'>'", "'='", "", "", "'\\u0000'",
	}
	staticData.SymbolicNames = []string{
		"", "ASP_COMMENT", "HTML_COMMENT", "SCRIPT_OPEN", "STYLE_OPEN", "DIRECTIVE_BEGIN",
		"DECLARATION_BEGIN", "ECHO_EXPRESSION_OPEN", "DATABIND_OPEN", "SCRIPTLET_OPEN",
		"CLOSE_TAG_BEGIN", "TAG_BEGIN", "WHITESPACES", "ASP_STATIC_CONTENT_CHARS",
		"BLOB_CLOSE", "BLOB_CONTENT", "TAG_SLASH_END", "TAG_CLOSE", "TAG_EQUALS",
		"TAG_IDENTIFIER", "TAG_WHITESPACE", "ATTVAL_VALUE", "SCRIPT_BODY", "STYLE_BODY",
	}
	staticData.RuleNames = []string{
		"aspDocuments", "aspDocument", "aspScript", "aspDirective", "aspDeclaration",
		"aspExpression", "aspDatabind", "aspScriptlet", "blobContent", "htmlElement",
		"htmlCloseElement", "htmlTag", "htmlAttribute", "htmlContent", "htmlMisc",
		"script", "style",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ASPParserInit initializes any static state used to implement ASPParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewASPParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ASPParserInit() {
	staticData := &ASPParserParserStaticData
	staticData.once.Do(aspparserParserInit)
}

// NewASPParser produces a new parser instance for the optional input antlr.TokenStream.
func NewASPParser(input antlr.TokenStream) *ASPParser {
	ASPParserInit()
	this := new(ASPParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ASPParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ASPParser.g4"

	return this
}

// ASPParser tokens.
const (
	ASPParserEOF                      = antlr.TokenEOF
	ASPParserASP_COMMENT              = 1
	ASPParserHTML_COMMENT             = 2
	ASPParserSCRIPT_OPEN              = 3
	ASPParserSTYLE_OPEN               = 4
	ASPParserDIRECTIVE_BEGIN          = 5
	ASPParserDECLARATION_BEGIN        = 6
	ASPParserECHO_EXPRESSION_OPEN     = 7
	ASPParserDATABIND_OPEN            = 8
	ASPParserSCRIPTLET_OPEN           = 9
	ASPParserCLOSE_TAG_BEGIN          = 10
	ASPParserTAG_BEGIN                = 11
	ASPParserWHITESPACES              = 12
	ASPParserASP_STATIC_CONTENT_CHARS = 13
	ASPParserBLOB_CLOSE               = 14
	ASPParserBLOB_CONTENT             = 15
	ASPParserTAG_SLASH_END            = 16
	ASPParserTAG_CLOSE                = 17
	ASPParserTAG_EQUALS               = 18
	ASPParserTAG_IDENTIFIER           = 19
	ASPParserTAG_WHITESPACE           = 20
	ASPParserATTVAL_VALUE             = 21
	ASPParserSCRIPT_BODY              = 22
	ASPParserSTYLE_BODY               = 23
)

// ASPParser rules.
const (
	ASPParserRULE_aspDocuments     = 0
	ASPParserRULE_aspDocument      = 1
	ASPParserRULE_aspScript        = 2
	ASPParserRULE_aspDirective     = 3
	ASPParserRULE_aspDeclaration   = 4
	ASPParserRULE_aspExpression    = 5
	ASPParserRULE_aspDatabind      = 6
	ASPParserRULE_aspScriptlet     = 7
	ASPParserRULE_blobContent      = 8
	ASPParserRULE_htmlElement      = 9
	ASPParserRULE_htmlCloseElement = 10
	ASPParserRULE_htmlTag          = 11
	ASPParserRULE_htmlAttribute    = 12
	ASPParserRULE_htmlContent      = 13
	ASPParserRULE_htmlMisc         = 14
	ASPParserRULE_script           = 15
	ASPParserRULE_style            = 16
)

// IAspDocumentsContext is an interface to support dynamic dispatch.
type IAspDocumentsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllAspDocument() []IAspDocumentContext
	AspDocument(i int) IAspDocumentContext

	// IsAspDocumentsContext differentiates from other interfaces.
	IsAspDocumentsContext()
}

type AspDocumentsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAspDocumentsContext() *AspDocumentsContext {
	var p = new(AspDocumentsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspDocuments
	return p
}

func InitEmptyAspDocumentsContext(p *AspDocumentsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspDocuments
}

func (*AspDocumentsContext) IsAspDocumentsContext() {}

func NewAspDocumentsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AspDocumentsContext {
	var p = new(AspDocumentsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ASPParserRULE_aspDocuments

	return p
}

func (s *AspDocumentsContext) GetParser() antlr.Parser { return s.parser }

func (s *AspDocumentsContext) EOF() antlr.TerminalNode {
	return s.GetToken(ASPParserEOF, 0)
}

func (s *AspDocumentsContext) AllAspDocument() []IAspDocumentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAspDocumentContext); ok {
			len++
		}
	}

	tst := make([]IAspDocumentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAspDocumentContext); ok {
			tst[i] = t.(IAspDocumentContext)
			i++
		}
	}

	return tst
}

func (s *AspDocumentsContext) AspDocument(i int) IAspDocumentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAspDocumentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAspDocumentContext)
}

func (s *AspDocumentsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AspDocumentsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AspDocumentsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ASPParserVisitor:
		return t.VisitAspDocuments(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ASPParser) AspDocuments() (localctx IAspDocumentsContext) {
	this := p
	_ = this

	localctx = NewAspDocumentsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ASPParserRULE_aspDocuments)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&16376) != 0 {
		{
			p.SetState(34)
			p.AspDocument()
		}

		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(40)
		p.Match(ASPParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAspDocumentContext is an interface to support dynamic dispatch.
type IAspDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AspScript() IAspScriptContext
	HtmlElement() IHtmlElementContext
	HtmlCloseElement() IHtmlCloseElementContext
	HtmlMisc() IHtmlMiscContext
	Script() IScriptContext
	Style() IStyleContext

	// IsAspDocumentContext differentiates from other interfaces.
	IsAspDocumentContext()
}

type AspDocumentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAspDocumentContext() *AspDocumentContext {
	var p = new(AspDocumentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspDocument
	return p
}

func InitEmptyAspDocumentContext(p *AspDocumentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspDocument
}

func (*AspDocumentContext) IsAspDocumentContext() {}

func NewAspDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AspDocumentContext {
	var p = new(AspDocumentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ASPParserRULE_aspDocument

	return p
}

func (s *AspDocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *AspDocumentContext) AspScript() IAspScriptContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAspScriptContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAspScriptContext)
}

func (s *AspDocumentContext) HtmlElement() IHtmlElementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHtmlElementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHtmlElementContext)
}

func (s *AspDocumentContext) HtmlCloseElement() IHtmlCloseElementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHtmlCloseElementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHtmlCloseElementContext)
}

func (s *AspDocumentContext) HtmlMisc() IHtmlMiscContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHtmlMiscContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHtmlMiscContext)
}

func (s *AspDocumentContext) Script() IScriptContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IScriptContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IScriptContext)
}

func (s *AspDocumentContext) Style() IStyleContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStyleContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStyleContext)
}

func (s *AspDocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AspDocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AspDocumentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ASPParserVisitor:
		return t.VisitAspDocument(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ASPParser) AspDocument() (localctx IAspDocumentContext) {
	this := p
	_ = this

	localctx = NewAspDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ASPParserRULE_aspDocument)
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case ASPParserDIRECTIVE_BEGIN, ASPParserDECLARATION_BEGIN, ASPParserECHO_EXPRESSION_OPEN, ASPParserDATABIND_OPEN, ASPParserSCRIPTLET_OPEN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(42)
			p.AspScript()
		}

	case ASPParserTAG_BEGIN:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(43)
			p.HtmlElement()
		}

	case ASPParserCLOSE_TAG_BEGIN:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(44)
			p.HtmlCloseElement()
		}

	case ASPParserWHITESPACES, ASPParserASP_STATIC_CONTENT_CHARS:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(45)
			p.HtmlMisc()
		}

	case ASPParserSCRIPT_OPEN:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(46)
			p.Script()
		}

	case ASPParserSTYLE_OPEN:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(47)
			p.Style()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAspScriptContext is an interface to support dynamic dispatch.
type IAspScriptContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AspDirective() IAspDirectiveContext
	AspDeclaration() IAspDeclarationContext
	AspExpression() IAspExpressionContext
	AspDatabind() IAspDatabindContext
	AspScriptlet() IAspScriptletContext

	// IsAspScriptContext differentiates from other interfaces.
	IsAspScriptContext()
}

type AspScriptContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAspScriptContext() *AspScriptContext {
	var p = new(AspScriptContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspScript
	return p
}

func InitEmptyAspScriptContext(p *AspScriptContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspScript
}

func (*AspScriptContext) IsAspScriptContext() {}

func NewAspScriptContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AspScriptContext {
	var p = new(AspScriptContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ASPParserRULE_aspScript

	return p
}

func (s *AspScriptContext) GetParser() antlr.Parser { return s.parser }

func (s *AspScriptContext) AspDirective() IAspDirectiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAspDirectiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAspDirectiveContext)
}

func (s *AspScriptContext) AspDeclaration() IAspDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAspDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAspDeclarationContext)
}

func (s *AspScriptContext) AspExpression() IAspExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAspExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAspExpressionContext)
}

func (s *AspScriptContext) AspDatabind() IAspDatabindContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAspDatabindContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAspDatabindContext)
}

func (s *AspScriptContext) AspScriptlet() IAspScriptletContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAspScriptletContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAspScriptletContext)
}

func (s *AspScriptContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AspScriptContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AspScriptContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ASPParserVisitor:
		return t.VisitAspScript(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ASPParser) AspScript() (localctx IAspScriptContext) {
	this := p
	_ = this

	localctx = NewAspScriptContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ASPParserRULE_aspScript)
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case ASPParserDIRECTIVE_BEGIN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(50)
			p.AspDirective()
		}

	case ASPParserDECLARATION_BEGIN:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(51)
			p.AspDeclaration()
		}

	case ASPParserECHO_EXPRESSION_OPEN:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(52)
			p.AspExpression()
		}

	case ASPParserDATABIND_OPEN:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(53)
			p.AspDatabind()
		}

	case ASPParserSCRIPTLET_OPEN:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(54)
			p.AspScriptlet()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAspDirectiveContext is an interface to support dynamic dispatch.
type IAspDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DIRECTIVE_BEGIN() antlr.TerminalNode
	BLOB_CLOSE() antlr.TerminalNode
	BlobContent() IBlobContentContext

	// IsAspDirectiveContext differentiates from other interfaces.
	IsAspDirectiveContext()
}

type AspDirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAspDirectiveContext() *AspDirectiveContext {
	var p = new(AspDirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspDirective
	return p
}

func InitEmptyAspDirectiveContext(p *AspDirectiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspDirective
}

func (*AspDirectiveContext) IsAspDirectiveContext() {}

func NewAspDirectiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AspDirectiveContext {
	var p = new(AspDirectiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ASPParserRULE_aspDirective

	return p
}

func (s *AspDirectiveContext) GetParser() antlr.Parser { return s.parser }

func (s *AspDirectiveContext) DIRECTIVE_BEGIN() antlr.TerminalNode {
	return s.GetToken(ASPParserDIRECTIVE_BEGIN, 0)
}

func (s *AspDirectiveContext) BLOB_CLOSE() antlr.TerminalNode {
	return s.GetToken(ASPParserBLOB_CLOSE, 0)
}

func (s *AspDirectiveContext) BlobContent() IBlobContentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlobContentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlobContentContext)
}

func (s *AspDirectiveContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AspDirectiveContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AspDirectiveContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ASPParserVisitor:
		return t.VisitAspDirective(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ASPParser) AspDirective() (localctx IAspDirectiveContext) {
	this := p
	_ = this

	localctx = NewAspDirectiveContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ASPParserRULE_aspDirective)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(57)
		p.Match(ASPParserDIRECTIVE_BEGIN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == ASPParserBLOB_CONTENT {
		{
			p.SetState(58)
			p.BlobContent()
		}

	}
	{
		p.SetState(61)
		p.Match(ASPParserBLOB_CLOSE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAspDeclarationContext is an interface to support dynamic dispatch.
type IAspDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DECLARATION_BEGIN() antlr.TerminalNode
	BLOB_CLOSE() antlr.TerminalNode
	BlobContent() IBlobContentContext

	// IsAspDeclarationContext differentiates from other interfaces.
	IsAspDeclarationContext()
}

type AspDeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAspDeclarationContext() *AspDeclarationContext {
	var p = new(AspDeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspDeclaration
	return p
}

func InitEmptyAspDeclarationContext(p *AspDeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspDeclaration
}

func (*AspDeclarationContext) IsAspDeclarationContext() {}

func NewAspDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AspDeclarationContext {
	var p = new(AspDeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ASPParserRULE_aspDeclaration

	return p
}

func (s *AspDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *AspDeclarationContext) DECLARATION_BEGIN() antlr.TerminalNode {
	return s.GetToken(ASPParserDECLARATION_BEGIN, 0)
}

func (s *AspDeclarationContext) BLOB_CLOSE() antlr.TerminalNode {
	return s.GetToken(ASPParserBLOB_CLOSE, 0)
}

func (s *AspDeclarationContext) BlobContent() IBlobContentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlobContentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlobContentContext)
}

func (s *AspDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AspDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AspDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ASPParserVisitor:
		return t.VisitAspDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ASPParser) AspDeclaration() (localctx IAspDeclarationContext) {
	this := p
	_ = this

	localctx = NewAspDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ASPParserRULE_aspDeclaration)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(ASPParserDECLARATION_BEGIN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == ASPParserBLOB_CONTENT {
		{
			p.SetState(64)
			p.BlobContent()
		}

	}
	{
		p.SetState(67)
		p.Match(ASPParserBLOB_CLOSE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAspExpressionContext is an interface to support dynamic dispatch.
type IAspExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ECHO_EXPRESSION_OPEN() antlr.TerminalNode
	BLOB_CLOSE() antlr.TerminalNode
	BlobContent() IBlobContentContext

	// IsAspExpressionContext differentiates from other interfaces.
	IsAspExpressionContext()
}

type AspExpressionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAspExpressionContext() *AspExpressionContext {
	var p = new(AspExpressionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspExpression
	return p
}

func InitEmptyAspExpressionContext(p *AspExpressionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ASPParserRULE_aspExpression
}

func (*AspExpressionContext) IsAspExpressionContext() {}

func NewAspExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AspExpressionContext {
	var p = new(AspExpressionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ASPParserRULE_aspExpression

	return p
}

func (s *AspExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *AspExpressionContext) ECHO_EXPRESSION_OPEN() antlr.TerminalNode {
	return s.GetToken(ASPParserECHO_EXPRESSION_OPEN, 0)
}

func (s *AspExpressionContext) BLOB_CLOSE() antlr.TerminalNode {
	return s.GetToken(ASPParserBLOB_CLOSE, 0)
}

func (s *AspExpressionContext) BlobContent() IBlobContentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlobContentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlobContentContext)
}
